--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,3 @@
-
-#********** ruby template********** 
-
-*.gem
-*.rbc
-.bundle
-.config
-coverage
-InstalledFiles
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-
-# YARD artifacts
-.yardoc
-_yardoc
-doc/
- 
-
 #********** osx template********** 
 
 .DS_Store
@@ -55,3 +32,24 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
  
+#********** ruby template********** 
+
+*.gem
+*.rbc
+.bundle
+.config
+coverage
+InstalledFiles
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
+
+# YARD artifacts
+.yardoc
+_yardoc
+!.yardopts
+doc/
