--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,11 @@ rvm:
   - 2.3.3
   #- 2.4 
   #- ruby-head
+gemfile:
+  - gemfiles/rails-4.gemfile
+  - gemfiles/rails-5.gemfile
+matrix:
+  exclude:
+    - rvm: 2.1.10
+      gemfiles/rails-5.gemfile
 script: bundle exec rake test
