--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ gemfile:
 matrix:
   exclude:
     - rvm: 2.1.10
-      gemfiles/rails-5.gemfile
+      gemfile: gemfiles/rails-5.gemfile
 script: bundle exec rake test
